tests/machine/x/go/left_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/left_join.go:12:17: undefined: Customer
../../../tests/machine/x/go/left_join.go:15:5: undefined: Customer
../../../tests/machine/x/go/left_join.go:19:14: undefined: Order
../../../tests/machine/x/go/left_join.go:23:5: undefined: Order
../../../tests/machine/x/go/left_join.go:28:21: undefined: Result
../../../tests/machine/x/go/left_join.go:29:31: undefined: Customer
../../../tests/machine/x/go/left_join.go:33:16: undefined: Result
../../../tests/machine/x/go/left_join.go:35:9: undefined: Result

1: //go:build ignore
