tests/machine/x/go/left_join.go
//go:build ignore

// Generated by Mochi compiler v0.10.25 on 2025-07-14T02:33:34Z

package main

import (
	"fmt"
)

func main() {
	customers := []CustomersItem{CustomersItem{
		Id:   1,
		Name: "Alice",
	}, CustomersItem{
		Id:   2,
		Name: "Bob",
	}}
	orders := []OrdersItem{OrdersItem{
		Id:         100,
		CustomerId: 1,
		Total:      250,
	}, OrdersItem{
		Id:         101,
		CustomerId: 3,
		Total:      80,
	}}
	result := func() []Result {
		cMap := make(map[int]CustomersItem)
		for _, c := range customers {
			cMap[c.Id] = c
		}
		results := []Result{}
		for _, o := range orders {
			r := Result{OrderId: o.OrderId, Total: o.Total}
			if c, ok := cMap[o.CustomerId]; ok {
				r.Customer = &c
			} else {
				r.Customer = nil
			}
			results = append(results, r)
		}
		return results
	}()
	fmt.Println("--- Left Join ---")
	for _, entry := range result {
		fmt.Println("Order", entry.OrderId, "customer", entry.Customer, "total", entry.Total)
	}
}
